# flyline

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE-CHECKLIST.md  docker-bake.hcl  install.sh
.github/: copilot-instructions.md
.github/DISCUSSION_TEMPLATE/: q-a.md  q-a.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: ci.yml  flycomp-ci.yml  flycomp-release.yml  generate-demos.yml
docker/: README.md  builder.Dockerfile  demo_agent_mode.Dockerfile  demo_auto_tab_completion.Dockerfile  demo_base.Dockerfile  demo_custom_animation.Dockerfile  demo_fuzzy_history.Dockerfile  demo_fuzzy_path_suggestions.Dockerfile  demo_fuzzy_suggestions.Dockerfile  demo_inline_history.Dockerfile  demo_ls_colors.Dockerfile  demo_overview.Dockerfile  demo_prompts.Dockerfile  demo_tab_completion_easing.Dockerfile  docker-bake.hcl  fish_integration_test.Dockerfile  fish_integration_test.py
docker/cross/: aarch64-unknown-linux-gnu.Dockerfile  x86_64-unknown-linux-gnu.Dockerfile
docs/: installing_and_upgrading.md  threads_and_locking.md
examples/: settings.sh  widgets.sh
flycomp/: AGENTS.md  Cargo.toml  build.rs  install.sh
flycomp/src/: lib.rs  main.rs  parse_help.rs  parse_man.rs
scripts/: flyline.fish
src/: active_suggestions.rs  agent_mode.rs  bash_funcs.rs  bash_symbols.rs  changelog.rs  cli.rs  comp_spec_synthesis.rs  content_builder.rs  content_utils.rs  dparser.rs  history.rs  hostnames.rs  lib.rs  mouse_state.rs  palette.rs  prompt_manager.rs  settings.rs  stateful_sliding_window.rs  tab_completion_context.rs  text_buffer.rs  tutorial.rs
src/app/: actions.rs  formatted_buffer.rs  mod.rs  tab_completion.rs  ui.rs
src/app/actions/: keyboard.rs
src/shell/: fish.rs  mod.rs  zsh.rs
tapes/: demo_agent_mode.tape  demo_auto_tab_completion.tape  demo_custom_animation.tape  demo_fuzzy_history.tape  demo_fuzzy_path_suggestions.tape  demo_fuzzy_suggestions.tape  demo_inline_history.tape  demo_ls_colors.tape  demo_overview.tape  demo_prompts_final.tape  demo_prompts_ps1.tape  demo_prompts_ps1_fill.tape  demo_prompts_rps1.tape  demo_setup.tape  demo_tab_completion_easing.tape
tests/: create_large_dir.py  fish_integration_tests.rs
tests/common/: mod.rs
tests/man_pages/: gh-codespace-cp.1  gh-codespace.1
