[package]
name = "flyline"
version = "0.8.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = { version = "4.6.2", features = ["unstable-dynamic"] }
ratatui = { git = "https://github.com/Marlinski/ratatui.git", rev = "fd8e0f024847af467129e0a166390d7e291c1b2e", features = ["default", "unstable-rendered-line-info"] }
# default flags include "windows" which just causes bloat
# "use-dev-tty" is needed to avoid crossterm's event loop from spinning on closed stdin.
# See https://github.com/crossterm-rs/crossterm/blob/fce58c879a748f3159216f68833100aa16141ab0/src/event/source/unix/mio.rs#L97-L104
# https://github.com/openai/codex/issues/14962
# https://github.com/ki-editor/ki-editor/commit/1dd31aa8eae9ff84498fb23b1319aa05783ca7d7
# https://github.com/crossterm-rs/crossterm/issues/828
# https://github.com/crossterm-rs/crossterm/issues/793
crossterm = { version = "0.29.0", default-features = false, features = ["bracketed-paste", "events", "osc52", "use-dev-tty", "libc"] }
chrono = { version = "0.4" }
serde = { version = "1", features = ["derive"] }
log = "0.4"
ansi-to-tui = { git = "https://github.com/HalFrgrd/ansi-to-tui.git", rev = "9101076f8e23010515ff6fe1571bf87a2d0d4abc"}
libc = "0.2.177"
anyhow = "1.0.102"
unicode-width = { version = "0.2.0", default-features = false }
unicode-segmentation = "1.13.2"
itertools = "0.14.0"
glob = "0.3.3"
flash = { git = "https://github.com/HalFrgrd/flash.git", rev = "e661e31c0fb864a993b4add880026b1c4795a84f" }
skim = { git = "https://github.com/HalFrgrd/skim", rev = "7908ee85a5f6cd49575925fcc0bdef3999409d26", default-features =  false, features = ["algos_only"]}
lscolors = "0.21.0"
serde_json = "1.0"
pulldown-cmark = { version = "0.13", default-features = false }
shlex = "1.3.0"
rand = "0.10.0"
parse-style = { version = "0.4.0" }
easing-function = "0.1.1"
ctor = "0.10.0"
strum = { version = "0.28.0", features = ["derive"] }

[features]
pre_bash_4_4 = []

[dev-dependencies]
rusty-fork = "0.3.1"

[profile.release]
panic = "unwind"
overflow-checks = true
lto = true

[build-dependencies]
chrono = { version = "0.4" }

# cross-rs configurations
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
# the centos version has an older glibc which helps with compatibility
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
[package.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main-centos"
