[package]
name = "flycomp"
version = "1.0.0"
edition = "2024"

[lib]
name = "flycomp"
path = "src/lib.rs"

[[bin]]
name = "flycomp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
is_executable = "1.0.5"
clap = { version = "4.6.1", features = ["derive", "string"] }
clap_complete = { version = "4.6.3", features = ["unstable-dynamic"] }
chrono = { version = "0.4" }
log = "0.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }

[build-dependencies]
chrono = { version = "0.4" }

